--- a/docs/releases/v6.md
+++ b/docs/releases/v6.md
@@ -9,13 +9,13 @@ h1 { text-align: center }
 
 <img class="mt-8" style="" src="/images/overview/servicestack-100m-1952w.png">
 
-<h1 class="py-4">100M package downloads!</h1>
+<h1 class="py-4">100M package downloads 🎉</h1>
 
 Shortly after adding [1st-class net6.0 support](/releases/v5_13), we're starting off **2022** eclipsing an impressive milestone having crossed
 [100M+ NuGet package downloads](https://www.nuget.org/profiles/servicestack) which we're celebrating with our first licensing model 
 change since our 2014 launch where ServiceStack is now...
 
-<h1 class="text-center py-4">Free for Individual & OSS projects!</h1>
+<h1 class="text-center py-4">FREE for Individual & OSS projects!</h1>
 
 This is the same perpetual, royalty-free License to use ServiceStack unrestricted as our [Indie Licenses](https://servicestack.net/pricing) (less commercial support). 
 
