Update redis wiki links.

--- a/docs/releases/v4_0_62.md
+++ b/docs/releases/v4_0_62.md
@@ -1020,7 +1020,7 @@ using (var trans = Redis.CreateTransaction())
 
 Resiliency has improved around auto-retrying of failing and non-responsive Sentinels.
 
-The default [Auto Retry Timeout](https://github.com/ServiceStack/ServiceStack.Redis/wiki/Automatic-Retries)
+The default [Auto Retry Timeout](../redis/automatic-retries.md)
 has increased to 10 seconds which can be changed with:
 
 ```csharp
