Remove references to Wire format

--- a/docs/releases/v6.md
+++ b/docs/releases/v6.md
@@ -1957,7 +1957,7 @@ Despite being a major release there should be only a few breaking changes, most 
  - Upgraded minimum .NET Framework version to **v4.7.2**
  - Removed out of support **netcoreapp2.1** targets
  - Removed Legacy Projects:
-   - [ServiceStack.Wire](https://github.com/ServiceStack/ServiceStack/tree/fx45/src/ServiceStack.Api.Swagger)
+   - [ServiceStack.Wire](https://github.com/ServiceStack/ServiceStack/tree/fx45/src/ServiceStack.Wire)
    - [ServiceStack.Memory](https://github.com/ServiceStack/ServiceStack.Text/tree/fx45/src/ServiceStack.Memory)
    - [ServiceStack.Api.Swagger](https://github.com/ServiceStack/ServiceStack/tree/fx45/src/ServiceStack.Api.Swagger)
    - [ServiceStack.Logging.EntLib5](https://github.com/ServiceStack/ServiceStack/tree/fx45/src/ServiceStack.Logging.EntLib5)
