CommonJS already imports DTOs, need to use var to override existing vars

--- a/docs/releases/v6.md
+++ b/docs/releases/v6.md
@@ -939,9 +939,9 @@ After which you'll have access to full feature-set of the generic `JsonServiceCl
 <script src="/types/js"></script>
 
 <script>
-let { Hello, JsonServiceClient } = exports
+var { Hello, JsonServiceClient } = exports
 
-let client = new JsonServiceClient()
+var client = new JsonServiceClient()
 client.api(new Hello({ name }))
     .then(api => console.log(api.response))
 </script>    
