--- a/docs/releases/v6.md
+++ b/docs/releases/v6.md
@@ -939,7 +939,7 @@ After which you'll have access to full feature-set of the generic `JsonServiceCl
 <script src="/types/js"></script>
 
 <script>
-var { Hello, JsonServiceClient } = exports
+var { JsonServiceClient, Hello } = exports
 
 var client = new JsonServiceClient()
 client.api(new Hello({ name }))
