OrmLite docs migrated with links fixed.

--- a/docs/releases/v4_0_33.md
+++ b/docs/releases/v4_0_33.md
@@ -64,7 +64,7 @@ non-blocking Async I/O, otherwise it fallsback to *pseudo async* support, i.e. s
 
 ### Multiple Self References
 
-OrmLite's [POCO Reference conventions](https://github.com/ServiceStack/ServiceStack.OrmLite#reference-conventions) 
+OrmLite's [POCO Reference conventions](/ormlite/typed-joins#reference-conventions) 
 has been expanded to include support for multiple Self References. 
 
 The example below shows a customer with multiple `CustomerAddress` references which are able to be matched with 
