--- a/docs/releases/v4_0_34.md
+++ b/docs/releases/v4_0_34.md
@@ -315,7 +315,7 @@ Plugins.Add(new RequestLogsFeature {
 
 ## [OrmLite](https://github.com/ServiceStack/ServiceStack.OrmLite)
 
-### [Multiple Self References](https://github.com/ServiceStack/ServiceStack.OrmLite#multiple-self-references)
+### [Multiple Self References](/ormlite/typed-joins#multiple-self-references)
 
 Supports for multiple Self References of the same type has been added where if there are multiple fields containing `[References]` to the same type, OrmLite will fallback to matching properties based on `{PropertyName}Id` property naming convention, e.g:
 
