--- a/docs/releases/v4_0_52.md
+++ b/docs/releases/v4_0_52.md
@@ -400,7 +400,7 @@ to use the latest **v3.0.5** of Npgsql which is only available for .NET 4.5+ pro
 dependency which contains .NET 4.0 .dll. 
 
 The primary benefit of upgrading means PostgreSQL now has true Async support where you can now use all of
-[OrmLite's Async APIs](https://github.com/ServiceStack/ServiceStack.OrmLite#async-api-overview) with PostgreSQL!
+[OrmLite's Async APIs](/ormlite/async-api) with PostgreSQL!
 See [ApiPostgreSqlTestsAsync.cs](https://github.com/ServiceStack/ServiceStack.OrmLite/blob/master/tests/ServiceStack.OrmLiteV45.Tests/ApiPostgreSqlTestsAsync.cs)
 for a number of Async API's in action.
 
