--- a/docs/releases/v4_0_56.md
+++ b/docs/releases/v4_0_56.md
@@ -12,7 +12,7 @@ ServiceStack's [AutoQuery](/autoquery) feature already
 provides the most productive way to create lightweight, high-performance data-driven Services which are 
 able to naturally benefit from ServiceStack's wider rich, value-added ecosystem and thanks to OrmLite's 
 typed RDBMS-agnostic API, AutoQuery has been used to create fully-queryable Services 
-[for most major RDBMS's](https://github.com/ServiceStack/ServiceStack.OrmLite#8-flavours-of-ormlite-is-on-nuget).
+[for most major RDBMS's](/ormlite/#ormlite-rdbms-providers).
 
 Whilst AutoQuery is optimized around server-side SQL querying of Relational Databases, we also wanted to 
 adopt its productive dev model and open it up to allow rich querying of other Data Sources 
@@ -196,7 +196,7 @@ Plugins.Add(new AutoQueryDataFeature { MaxLimit = 100 }
 
 The implementation of `GetTodaysUserActivity` Service uses an async OrmLite RDBMS call to get all User Logins 
 within the last day, fetches the Live Activity data from Redis, then 
-[merges the disconnected POCO result sets](https://github.com/ServiceStack/ServiceStack.OrmLite#merge-disconnected-poco-result-sets)
+[merges the disconnected POCO result sets](/ormlite/reference-support#merge-disconnected-poco-result-sets)
 into the `UserLogin` POCO which it returns:
 
 ```csharp
@@ -941,7 +941,7 @@ Caching Validator. You can use any opaque string for the `ETag` that uniquely re
 response that you can use to determine what version the client has, which could be an MD5 or SHA Hash of
 the response but can also be a unique version string. E.g. Adding a `RowVersion` property to your OrmLite 
 POCO Data Models turns on 
-[OrmLite's Optimistic Concurrency](https://github.com/ServiceStack/ServiceStack.OrmLite#optimistic-concurrency)
+[OrmLite's Optimistic Concurrency](/ormlite/optimistic-concurrency)
 feature where each time a record is modified it's automatically populated with a new version, these 
 characteristics makes it ideal for use as an ETag which we can just return as a string:
 
