--- a/docs/releases/v4_0_60.md
+++ b/docs/releases/v4_0_60.md
@@ -161,7 +161,7 @@ var response = await "https://example.org/secured".GetJsonFromUrlAsync(
 The necessary functionality to support API Keys has been implemented in the following supported 
 Auth Repositories:
 
- - `OrmLiteAuthRepository` - Supporting [most major RDBMS](https://github.com/ServiceStack/ServiceStack.OrmLite#8-flavours-of-ormlite-is-on-nuget)
+ - `OrmLiteAuthRepository` - Supporting [most major RDBMS](/ormlite/#ormlite-rdbms-providers)
  - `RedisAuthRepository` - Uses Redis back-end data store
  - `DynamoDbAuthRepository` - Uses AWS DynamoDB data store
  - `InMemoryAuthRepository` - Uses InMemory Auth Repository
@@ -1083,7 +1083,7 @@ a table with existing rows.
 ### New SelectMulti API
 
 Previously the only Typed API available to select data across multiple joined tables was to use a 
-[Custom POCO with all the columns](https://github.com/ServiceStack/ServiceStack.OrmLite#selecting-multiple-columns-across-joined-tables) 
+[Custom POCO with all the columns](/ormlite/typed-joins) 
 you want from any of the joined tables, e.g:
 
 ```
@@ -1147,7 +1147,7 @@ results are mapped. So it doesn't matter whether the query used raw custom SQL o
 OrmLite just looks at the dataset returned to workout how the results should be mapped. This allows you
 to use any of the [loose-typed Convenience APIs](http://stackoverflow.com/a/37443162/85785) to fetch
 data from multiple joined tables. In addition to using 
-[untyped .NET Collections](https://github.com/ServiceStack/ServiceStack.OrmLite#dynamic-result-sets), we've
+[untyped .NET Collections](/ormlite/dynamic-result-sets), we've
 also now added support for `Select<dynamic>` as well:
 
 ```csharp
