--- a/docs/releases/v4_5_10.md
+++ b/docs/releases/v4_5_10.md
@@ -691,15 +691,15 @@ We've replaced our internal string parsing in ServiceStack.Text's serializers to
  
 > v4.5.8
  
-|                                             Method |               Mean |          StdErr |            StdDev |      Gen 0 | Allocated |
---------------------------------------------------- |------------------- |---------------- |------------------ |----------- |----------- |
-| Deserialize: Complex MiniProfiler | 19,134,639.0083 ns | 190,778.9031 ns | 1,176,040.1418 ns | 1062.5 |   9.09 MB |
+| Method                            | Mean               | StdErr          | StdDev            | Gen 0  | Allocated |
+|-----------------------------------|--------------------|-----------------|-------------------|--------|-----------|
+| Deserialize: Complex MiniProfiler | 19,134,639.0083 ns | 190,778.9031 ns | 1,176,040.1418 ns | 1062.5 | 9.09 MB   |
  
 > v4.5.10
  
-|                                             Method |               Mean |         StdErr |          StdDev |    Gen 0 | Allocated |
---------------------------------------------------- |------------------- |--------------- |---------------- |--------- |---------- |
-| Deserialize: Complex MiniProfiler | 12,754,285.9029 ns | 60,934.7823 ns | 235,999.3970 ns |  22.9167 |    1.7 MB |
+| Method                            | Mean               | StdErr         | StdDev          | Gen 0   | Allocated |
+|-----------------------------------|--------------------|----------------|-----------------|---------|-----------|
+| Deserialize: Complex MiniProfiler | 12,754,285.9029 ns | 60,934.7823 ns | 235,999.3970 ns | 22.9167 | 1.7 MB    |
  
  
 The parsing implementations of primitive .NET Types like integers, decimal and Guid types were replaced with custom implementations utilizing `StringSegment` which sees their performance improved by **2.5-4x**. We've added several tests to ensure consistent behavior, but if needed they can revert to using .NET BCL parsing methods by setting: `JsConfig.UseSystemParseMethods = true`. If this is needed for whatever reason please let us know at https://github.com/ServiceStack/Issues
@@ -835,7 +835,7 @@ tuple.i //= 2
  
 ### Support for C# 7 Value Tuples
  
-The `ref` API above was used to implement the new fast C# 7 Value Tuple support in OrmLite which enables an alternative terse, clean and typed API for accessing the [Dynamic Result Sets](https://github.com/ServiceStack/ServiceStack.OrmLite#dynamic-result-sets) returned when using a custom Select expression:
+The `ref` API above was used to implement the new fast C# 7 Value Tuple support in OrmLite which enables an alternative terse, clean and typed API for accessing the [Dynamic Result Sets](/ormlite/dynamic-result-sets) returned when using a custom Select expression:
  
 ```csharp
 var query = db.From<Employee>()
@@ -896,7 +896,7 @@ db.From<Table1>()
  
 Which now supports up to **15 tables** in a single SQL Condition. 
  
-The benefits for using OrmLite's Typed API for executing large, complex SQL queries are its typing benefits whilst being able to generate cross-platform SQL that can be executed on multiple RDBMS's, however if you don't have these requirements it can often be easier to execute [Custom SQL Statements](https://github.com/ServiceStack/ServiceStack.OrmLite#typed-sqlexpressions-with-custom-sql-apis) using `db.SqlList<T>()` instead - especially useful when needing to utilize RDBMS-specific features. 
+The benefits for using OrmLite's Typed API for executing large, complex SQL queries are its typing benefits whilst being able to generate cross-platform SQL that can be executed on multiple RDBMS's, however if you don't have these requirements it can often be easier to execute [Custom SQL Statements](/ormlite/typed-sqlexpression-custom-sql) using `db.SqlList<T>()` instead - especially useful when needing to utilize RDBMS-specific features. 
  
 ### Expanded Join Conditions 
  
