--- a/docs/releases/v5_13.md
+++ b/docs/releases/v5_13.md
@@ -593,7 +593,7 @@ SetConfig(new HostConfig {
 ## Breaking Changes
 
 One breaking change that was unavoidable after adding .NET 6 TFM builds was needing to rename 
-[UpdateOnly OrmLite APIs](https://github.com/ServiceStack/ServiceStack.OrmLite#updateonly) 
+[UpdateOnly OrmLite APIs](/ormlite/ormlite-apis#updateonly) 
 to resolve new C# compiler ambiguous method overload errors.
 
 Previously `UpdateOnly()` APIs accepted either a lambda expression where the fields to update would be inferred by
