--- a/docs/releases/v5_1_0.md
+++ b/docs/releases/v5_1_0.md
@@ -2061,7 +2061,7 @@ row.Id //= Auto populated with new Guid
 
 ### Select Multiple Join Alias Tables
 
-You can use [SelectMulti](https://github.com/ServiceStack/ServiceStack.OrmLite#selecting-multiple-columns-across-joined-tables) with multiple joined table aliases by specifying the table alias to use for each Type selected, e.g:
+You can use [SelectMulti](/ormlite/typed-joins) with multiple joined table aliases by specifying the table alias to use for each Type selected, e.g:
 
 ```csharp
 q = db.From<Sale>()
