--- a/docs/releases/v5_2.md
+++ b/docs/releases/v5_2.md
@@ -2855,7 +2855,7 @@ empty `<i hidden></i>` in release builds:
 
 ### DB Scriptss
 
-- `ormliteVar` - Access RDBMS dialect-provider specific [OrmLite Variables](https://github.com/ServiceStack/ServiceStack.OrmLite#system-variables-and-default-values)
+- `ormliteVar` - Access RDBMS dialect-provider specific [OrmLite Variables](/ormlite/reference-support#system-variables-and-default-values)
 - `isUnsafeSql` - Test for destructive/mutable SQL Statements
 
 ### Date/Time Filters
@@ -2940,7 +2940,7 @@ db.From<Table1>()
 
 ### OrmLite variables in CustomField
 
-For added flexibility in creating database-agnostic solutions you can reference [OrmLite Variables](https://github.com/ServiceStack/ServiceStack.OrmLite#system-variables-and-default-values) which can be configured differently for each
+For added flexibility in creating database-agnostic solutions you can reference [OrmLite Variables](/ormlite/typed-sqlexpression-custom-sql#system-variables-and-default-values) which can be configured differently for each
 RDBMS provider in `[CustomField]` table definitions.
 
 E.g. you can create a table that defines columns using the Max Text and Unicode Text data type for each RDBMS with:
