--- a/docs/releases/v5_5.md
+++ b/docs/releases/v5_5.md
@@ -4361,7 +4361,7 @@ var q = db.From<Table>()
 
 ### SELECT DISTINCT in SelectMulti
 
-[SelectMulti](https://github.com/ServiceStack/ServiceStack.OrmLite#selecting-multiple-columns-across-joined-tables) APIs for populating
+[SelectMulti](/ormlite/typed-joins) APIs for populating
 multiple tables now supports **SELECT DISTINCT** with:
 
 ```csharp
