--- a/docs/releases/v5_8.md
+++ b/docs/releases/v5_8.md
@@ -1011,7 +1011,7 @@ using (var db = dbFactory.OpenDbConnection())
 
 ### NOLOCK SQL Server Table Hint
 
-New NOLOCK [SQL Server Table Hint](https://github.com/ServiceStack/ServiceStack.OrmLite#sql-server-table-hints) available:
+New NOLOCK [SQL Server Table Hint](/ormlite/reference-support#sql-server-table-hints) available:
 
 ```csharp
 var q = db.From<Car>()
