--- a/docs/releases/v5_9.md
+++ b/docs/releases/v5_9.md
@@ -369,7 +369,7 @@ It makes use of the [app](/netcore-windows-desktop) dotnet tool for running Chro
 [mix in additional gists](/mix-tool) which can be used in SharpData to configure RDBMS's, copy SQLite databases and
 apply per-database customizations to add navigable deep links and customized UI Views to each table resultset.
 
-Whilst SharpData supports [connecting to most popular RDBMS's](https://github.com/ServiceStack/ServiceStack.OrmLite#8-flavours-of-ormlite-is-on-nuget), it's 
+Whilst SharpData supports [connecting to most popular RDBMS's](/ormlite/#ormlite-rdbms-providers), it's 
 especially useful for being able to deploy an instant stand-alone UI with an embedded SQLite databases which can be published independently in a gist and
 launched from a single URL.
 
@@ -1488,7 +1488,7 @@ AutoMapping.RegisterPopulator((Dictionary<string,object> target, CreateRockstar 
 ### Auto Guid's
 
 In addition to supporting `[AutoIncrement]` to insert records with Auto Incrementing Ids, you can use `[AutoId]` to insert entities with
-[RDBMS generated UUIDs](https://github.com/ServiceStack/ServiceStack.OrmLite#auto-populated-guid-ids) where they're supported otherwise
+[RDBMS generated UUIDs](/ormlite/reference-support#auto-populated-guid-ids) where they're supported otherwise
 OrmLite populates them with `Guid.NewGuid()`.
 
 > Note: usage of inheritance isn't required & has the same behavior as using explicit properties
@@ -1524,7 +1524,7 @@ public class CreateRockstarWithAutoGuid : RockstarBase, ICreateDb<Rockstar>, IRe
 
 ### Optimistic Concurrency
 
-We can declaratively add support for [OrmLite's Optimistic Concurrency](https://github.com/ServiceStack/ServiceStack.OrmLite#optimistic-concurrency) by
+We can declaratively add support for [OrmLite's Optimistic Concurrency](/ormlite/optimistic-concurrency) by
 including `ulong RowVersion` property on Auto Crud Request/Response DTOs and Data Models, e.g:
 
 ```csharp
@@ -2305,7 +2305,7 @@ If for instance you wanted it to execute through your latest logic with any enha
 Long time users of ServiceStack will know it's a staunch proponent of **code-first development** where your C# Types retains the 
 master authority of your App's logic, although there are a number of times where you have to work with existing databases which 
 would require significant effort to create the initial code-first Data Models. Historically we've pointed people to use 
-[OrmLite's T4 Template Support](https://github.com/ServiceStack/ServiceStack.OrmLite#t4-template-support) which provides a decent initial stab, 
+[OrmLite's T4 Template Support](/ormlite/untyped-api-and-t4#t4-template-support) which provides a decent initial stab, 
 however it's limited in its capability and offers a sub par development experience.
 
 ### Code Generation of AutoQuery & Crud Services
@@ -2928,7 +2928,9 @@ You can run this Gist Desktop App via URL Scheme from:
 
 Or via command-line:
 
+```
     $ app open win32
+```
 
 The main source code of this component is in [Win32/index.ts](https://github.com/sharp-apps/win32/blob/master/src/components/Win32/index.ts),
 which makes use of the built in TypeScript APIs below from `@servicestack/desktop`:
