--- a/docs/releases/v4_0_40.md
+++ b/docs/releases/v4_0_40.md
@@ -836,7 +836,7 @@ Whilst the latest version of Swift fixed a number of stability issues, it also i
 ## OrmLite
 
 ### Merge Disconnected POCO Data Sets
-The new `Merge` extension method can stitch disconnected POCO collections together as per their relationships defined in [OrmLite's POCO References](https://github.com/ServiceStack/ServiceStack.OrmLite#reference-support-poco-style).
+The new `Merge` extension method can stitch disconnected POCO collections together as per their relationships defined in [OrmLite's POCO References](/ormlite/reference-support).
 
 For example you can select a collection of Customers who've made an order with quantities of 10 or more and in a separate query select their filtered Orders and then merge the results of these 2 distinct queries together with:
 ```csharp
