--- a/docs/releases/v4_0_62.md
+++ b/docs/releases/v4_0_62.md
@@ -675,7 +675,7 @@ ServiceStack's `IAuthProvider` has been refactored to use the central and overri
 based on the incoming request.
 
 This can be used with the new `OrmLiteAuthRepositoryMultitenancy` provider to maintain isolated 
-User Accounts per tenant in all [major supported RDBMS](https://github.com/ServiceStack/ServiceStack.OrmLite#download)
+User Accounts per tenant in all [major supported RDBMS](/ormlite/#download)
 
 Since each tenant database uses their own isolated UserAuth tables we need to provide the list of db 
 connection strings that the OrmLite AuthRepository uses to check and create any missing User Auth tables:
@@ -792,7 +792,7 @@ Special thanks to [@shift-evgeny](https://github.com/shift-evgeny) for this feat
 
 [@OlegNadymov](https://github.com/OlegNadymov) has added several features in this release where 
 you can now query nested 
-[POCO References](https://github.com/ServiceStack/ServiceStack.OrmLite#reference-support-poco-style) 
+[POCO References](/ormlite/reference-support) 
 on JOIN Tables in a `Where()` expression, e.g:
 
 ```csharp
