Move around ormlite index.md, getting-started.md, and new installation.md + fix related links/menus.

--- a/docs/releases/v4_5_8.md
+++ b/docs/releases/v4_5_8.md
@@ -1343,7 +1343,7 @@ application-level "events" raised by your services:
 The ServiceStack.Webhooks plugin is extremely versatile and supports persisting event subscriptions in 
 [multiple back-end data stores](https://github.com/jezzsantos/ServiceStack.Webhooks/wiki/Plugins) 
 including: Memory, Cache Clients, Azure Table Storage as well as every major 
-[RDBMS that supported by OrmLite](/ormlite/#download).
+[RDBMS that supported by OrmLite](/ormlite/installation).
 
 #### Getting Started
 
