--- a/docs/releases/v4_0_62.md
+++ b/docs/releases/v4_0_62.md
@@ -675,7 +675,7 @@ ServiceStack's `IAuthProvider` has been refactored to use the central and overri
 based on the incoming request.
 
 This can be used with the new `OrmLiteAuthRepositoryMultitenancy` provider to maintain isolated 
-User Accounts per tenant in all [major supported RDBMS](/ormlite/#download)
+User Accounts per tenant in all [major supported RDBMS](/ormlite/installation)
 
 Since each tenant database uses their own isolated UserAuth tables we need to provide the list of db 
 connection strings that the OrmLite AuthRepository uses to check and create any missing User Auth tables:
