Add v6.0.2 release notes

--- a/docs/releases/v6.md
+++ b/docs/releases/v6.md
@@ -87,13 +87,142 @@ If this initiative is successful in significantly increasing adoption without im
 
 Either way we welcome new ServiceStack developers previously prohibited by cost and hope you create something awesome with it! 🎉
 
-### v5.14 Release
+## v6.0.2 Release
+
+This release is essentially a more refined v6 release with a week of fixes of reported issues and another breaking change we thought important to introduce immediately to align with the recommendations for .NET 6+ future releases.
+
+### API Explorer now supports PascalCase
+
+Previously you needed to use ASP.NET Core's default camelCase to use API Explorer & Admin UI, we've now also added support for .NET Framework PascalCase default bringing
+
+### HTTP Utils rewritten to use HttpClient in .NET 6+
+
+Our [HTTP Utils](/http-utils) provides user-friendly extension methods for intuitively making HTTP requests from URL strings, e.g:
+
+```csharp
+List<GithubRepo> repos = $"https://api.github.com/users/{user}/repos"
+    .GetJsonFromUrl()
+    .FromJson<List<GithubRepo>>();
+```
+
+As .NET's existing `HttpWebRequest` has been officially deprecated, these UX-friendly HTTP APIs were rewritten to use the recommended **HttpClient** implementation in .NET 6+ builds so they can continue to used without concern of relying on deprecated implementations.
+
+All new HttpClient implementations remain in the core **ServiceStack.Text.dll** which continues to remain a **dependency-free** library courtesy of HttpClient being available in default .NET 6 installations.
+
+### New Source Compatible API
+
+Given they're completely different implementations it wasn't possible to enable 100% compatibility with existing code that use custom Request & Response filters
+however as we need to use both implementations in the same code-base we've added a source compatible `.With()` APIs you can use instead to customize a HTTP Request, e.g:
+
+```csharp
+var response = url.GetJsonFromUrl(requestFilter:req => req.With(c => c.UserAgent = UserAgent));
+var response = await url.GetJsonFromUrlAsync(requestFilter:req => req.With(c => c.UserAgent = UserAgent));
+```
+
+Which lets you configure a [HttpRequestConfig](https://github.com/ServiceStack/ServiceStack.Text/blob/master/src/ServiceStack.Text/HttpRequestConfig.cs) that is equally applied to their `HttpClient` and `HttpWebRequest` implementations. It has `Set*` methods that simplifies common tasks like configuring an Authenticated Request, e.g:
+
+```csharp
+var json = await url.GetJsonFromUrlAsync(requestFilter: req => 
+    req.With(c => {
+        c.UserAgent = UserAgent;
+        c.SetAuthBasic(ClientId, ClientSecret);
+    }), token: token).ConfigAwait();
+```
+
+The full [HttpRequestConfig](https://github.com/ServiceStack/ServiceStack.Text/blob/master/src/ServiceStack.Text/HttpRequestConfig.cs) API available in this release include:
+
+```csharp
+public class HttpRequestConfig 
+{
+    public string? Accept { get; set; } 
+    public string? UserAgent { get; set; } 
+    public string? ContentType { get; set; }
+    public string? Referer { get; set; }
+    public string? Expect { get; set; }
+    public string[]? TransferEncoding { get; set; }
+    public bool? TransferEncodingChunked { get; set; }
+    public NameValue? Authorization { get; set; }
+    public LongRange? Range { get; set; }
+    public List<NameValue> Headers { get; set; } = new();
+
+    public void SetAuthBearer(string value) => Authorization = new("Bearer", value);
+    public void SetAuthBasic(string name, string value) => 
+        Authorization = new("Basic", Convert.ToBase64String(Encoding.UTF8.GetBytes(name + ":" + value)));
+    public void SetRange(long from, long? to = null) => Range = new(from, to);
+
+    public void AddHeader(string name, string value) => Headers.Add(new(name, value));
+}
+```
+
+#### Inspecting Responses
+
+For source compatible APIs to inspect HTTP Responses you can use `GetHeader()` to retrieve HTTP Response Headers, `GetContentLength()` to retrieve the **Content-Length** if exists and `MatchesContentType()` to compare against existing MimeTypes which ignores whitespace, casing and charset fixes, e.g:
+
+```csharp
+var response = baseUrl.AppendPath("dir","sub").AddQueryParam("id", 1)
+    .SendStringToUrl(method: "HEAD",
+        responseFilter: res => {
+            Assert.That(res.GetHeader("X-Method"), Is.EqualTo("HEAD"));
+            Assert.That(res.GetHeader("X-Id"), Is.EqualTo("1"));
+            Assert.That(res.MatchesContentType("video/mp4"));
+            Assert.That(res.GetContentLength(), Is.EqualTo(100));
+        });
+```
+
+#### Connect to HttpFactory
+
+The HttpClient HttpUtils use a lazy singleton for efficiency however if you're using it in a host that has an ASP.NET IOC you can configure it to make use of a HttpClient factory by using the `IServiceCollection.AddHttpUtilsClient()` extension method, e.g:
+
+```csharp
+public class AppHost : AppHostBase, IHostingStartup
+{
+    public void Configure(IWebHostBuilder builder) => builder
+        .ConfigureServices(services => services.AddHttpUtilsClient())
+        .Configure(app => {
+            if (!HasInit) 
+                app.UseServiceStack(new AppHost());
+        });
+}
+```
+
+#### Custom HttpClient
+
+Alternatively you can configure it to use your own client factory with:
+
+```csharp
+HttpUtils.CreateClient = () => UseMyHttpClient()
+```
+
+The following Core APIs also have extension methods on `HttpClient` allowing :
+
+ - `SendStringToUrl()`
+ - `SendStringToUrlAsync()`
+ - `SendBytesToUrl()`
+ - `SendBytesToUrlAsync()`
+ - `SendStreamToUrl()`
+ - `SendStreamToUrlAsync()`
+
+### ServiceStack now using HttpClient in .NET 6
+
+A consequence of replacing the existing HTTP Utils `HttpWebRequest` implementations is that internally ServiceStack is now using `HttpClient` throughout its libraries including the [C# Server Events Client](/csharp-server-events-client), [ServiceStack.Stripe](https://github.com/ServiceStack/Stripe), `GitHubGateway`
+
+### ZLibStream used for deflate compression in .NET 6
+
+Thanks to Eaton from the ServiceStack Community for [reporting issues with DeflateStream](https://forums.servicestack.net/t/v6-compression-question/10334/4) which has been [superseded by `ZLibStream`](https://github.com/dotnet/runtime/issues/38022) for deflate compression in .NET 6+.
+
+### /types/js now cached in production
+
+Given the primary usecase for the new [JavaScrip Language support](#instant-typed-javascript-dtos-🚀) is to enable instant access to Typed APIs using a `<script>` reference in HTML Pages, it's now cached by default in non **DebugMode** configurations for improved runtime performance.
+
+Should it be needed, uncached JS DTOs can be accessed with `/types/js?cache=false`.
+
+## v5.14 Release
 
 In conjunction with this v6 release we've also shipped v5.14 which is our 
 [last release supporting .NET Framework v4.5](/releases/v5_13#v4-5-net-framework-deprecation-notice). 
 From **v6+** all ServiceStack packages have been upgraded to use **.NET Framework v4.7.2+** across the board.
 
-### Fast Browsing Mode 
+## Fast Browsing Mode 
 
 We regret the unnaturally long length of these release notes, and invite you to scan Sidebar links to **fast jump** to interested features ⚡️
 
@@ -746,20 +875,6 @@ Where it will display our custom Form Layout in both **New User** and **Edit Use
 </div>
 
 You can also use `QueryUserAuthProperties` to specify which columns to display in the results view, whilst `QueryMediaRules` can be used to control which columns start appearing at different responsive UI breakpoints for an optimized layout in smaller devices.
-
-### Requires camelCase
-
-For this first release both **API Explorer** and **Admin UI** consumes the rich metadata powering their UIs using a typed schema that expects API Responses in **camelCase**, i.e. the default JSON serialization used in ASP .NET Core.
-
-.NET Framework projects can switch to camelCase serialization with:
-
-```csharp
-JsConfig.Init(new Config {
-    TextCase = TextCase.CamelCase
-});
-```
-
-We'll look at adding support for other text casing options in a future release.
 
 ### Roadmap
 
