--- a/docs/releases/v6.md
+++ b/docs/releases/v6.md
@@ -119,7 +119,9 @@ var response = url.GetJsonFromUrl(requestFilter:req => req.With(c => c.UserAgent
 var response = await url.GetJsonFromUrlAsync(requestFilter:req => req.With(c => c.UserAgent = UserAgent));
 ```
 
-Which lets you configure a [HttpRequestConfig](https://github.com/ServiceStack/ServiceStack.Text/blob/master/src/ServiceStack.Text/HttpRequestConfig.cs) that is equally applied to their `HttpClient` and `HttpWebRequest` implementations. It has `Set*` methods that simplifies common tasks like configuring an Authenticated Request, e.g:
+Which lets you configure a [HttpRequestConfig](https://github.com/ServiceStack/ServiceStack.Text/blob/master/src/ServiceStack.Text/HttpRequestConfig.cs) that is equally applied to their `HttpClient` and `HttpWebRequest` implementations. 
+
+It also includes `Set*` methods to simplify common tasks like creating Authenticated Requests, e.g:
 
 ```csharp
 var json = await url.GetJsonFromUrlAsync(requestFilter: req => 
@@ -156,7 +158,7 @@ public class HttpRequestConfig
 
 #### Inspecting Responses
 
-For source compatible APIs to inspect HTTP Responses you can use `GetHeader()` to retrieve HTTP Response Headers, `GetContentLength()` to retrieve the **Content-Length** if exists and `MatchesContentType()` to compare against existing MimeTypes which ignores whitespace, casing and charset fixes, e.g:
+For source compatible APIs to inspect HTTP Responses you can use `GetHeader()` to retrieve HTTP Response Headers, `GetContentLength()` to retrieve the **Content-Length** if exists and `MatchesContentType()` to compare against existing MimeTypes which ignores whitespace, casing and charset suffixes, e.g:
 
 ```csharp
 var response = baseUrl.AppendPath("dir","sub").AddQueryParam("id", 1)
