--- a/docs/releases/v6.md
+++ b/docs/releases/v6.md
@@ -195,7 +195,7 @@ Alternatively you can configure it to use your own client factory with:
 HttpUtils.CreateClient = () => UseMyHttpClient()
 ```
 
-The following Core APIs also have extension methods on `HttpClient` allowing :
+The following Core APIs also have extension methods on `HttpClient` which existing HttpClient instances to reuse its implementations:
 
  - `SendStringToUrl()`
  - `SendStringToUrlAsync()`
