--- a/docs/releases/v6.md
+++ b/docs/releases/v6.md
@@ -93,7 +93,7 @@ This release is essentially a more refined v6 release with a week of fixes of re
 
 ### API Explorer now supports PascalCase
 
-Previously you needed to use ASP.NET Core's default camelCase to use API Explorer & Admin UI, we've now also added support for .NET Framework PascalCase default bringing
+Previously you needed to use ASP.NET Core's default camelCase to use API Explorer & Admin UI, we've now also added support for .NET Framework PascalCase default bringing ServiceStack's exciting new mainstay to more supported platforms.
 
 ### HTTP Utils rewritten to use HttpClient in .NET 6+
 
@@ -195,7 +195,7 @@ Alternatively you can configure it to use your own client factory with:
 HttpUtils.CreateClient = () => UseMyHttpClient()
 ```
 
-The following Core APIs also have extension methods on `HttpClient` which existing HttpClient instances to reuse its implementations:
+The following Core APIs also have extension methods on `HttpClient` which existing HttpClient instances can make use of:
 
  - `SendStringToUrl()`
  - `SendStringToUrlAsync()`
@@ -206,7 +206,7 @@ The following Core APIs also have extension methods on `HttpClient` which existi
 
 ### ServiceStack now using HttpClient in .NET 6
 
-A consequence of replacing the existing HTTP Utils `HttpWebRequest` implementations is that internally ServiceStack is now using `HttpClient` throughout its libraries including the [C# Server Events Client](/csharp-server-events-client), [ServiceStack.Stripe](https://github.com/ServiceStack/Stripe), `GitHubGateway`
+A consequence of replacing the existing HTTP Utils `HttpWebRequest` implementations is that internally ServiceStack is now using `HttpClient` throughout its libraries including the [C# Server Events Client](/csharp-server-events-client), [ServiceStack.Stripe](https://github.com/ServiceStack/Stripe), `GitHubGateway`, `AuthHttpGateway`, etc.
 
 ### ZLibStream used for deflate compression in .NET 6
 
