--- a/docs/releases/v5_2.md
+++ b/docs/releases/v5_2.md
@@ -2940,7 +2940,7 @@ db.From<Table1>()
 
 ### OrmLite variables in CustomField
 
-For added flexibility in creating database-agnostic solutions you can reference [OrmLite Variables](/ormlite/typed-sqlexpression-custom-sql#system-variables-and-default-values) which can be configured differently for each
+For added flexibility in creating database-agnostic solutions you can reference [OrmLite Variables](/ormlite/custom-sql#system-variables-and-default-values) which can be configured differently for each
 RDBMS provider in `[CustomField]` table definitions.
 
 E.g. you can create a table that defines columns using the Max Text and Unicode Text data type for each RDBMS with:
