--- a/docs/releases/v4_5_10.md
+++ b/docs/releases/v4_5_10.md
@@ -896,7 +896,7 @@ db.From<Table1>()
  
 Which now supports up to **15 tables** in a single SQL Condition. 
  
-The benefits for using OrmLite's Typed API for executing large, complex SQL queries are its typing benefits whilst being able to generate cross-platform SQL that can be executed on multiple RDBMS's, however if you don't have these requirements it can often be easier to execute [Custom SQL Statements](/ormlite/typed-sqlexpression-custom-sql) using `db.SqlList<T>()` instead - especially useful when needing to utilize RDBMS-specific features. 
+The benefits for using OrmLite's Typed API for executing large, complex SQL queries are its typing benefits whilst being able to generate cross-platform SQL that can be executed on multiple RDBMS's, however if you don't have these requirements it can often be easier to execute [Custom SQL Statements](/ormlite/custom-sql) using `db.SqlList<T>()` instead - especially useful when needing to utilize RDBMS-specific features. 
  
 ### Expanded Join Conditions 
  
