--- a/docs/releases/v5_9.md
+++ b/docs/releases/v5_9.md
@@ -2305,7 +2305,7 @@ If for instance you wanted it to execute through your latest logic with any enha
 Long time users of ServiceStack will know it's a staunch proponent of **code-first development** where your C# Types retains the 
 master authority of your App's logic, although there are a number of times where you have to work with existing databases which 
 would require significant effort to create the initial code-first Data Models. Historically we've pointed people to use 
-[OrmLite's T4 Template Support](/ormlite/untyped-api-and-t4#t4-template-support) which provides a decent initial stab, 
+[OrmLite's T4 Template Support](/ormlite/autogen-t4#t4-template-support) which provides a decent initial stab, 
 however it's limited in its capability and offers a sub par development experience.
 
 ### Code Generation of AutoQuery & Crud Services
