Replace UserVoice links with ServiceStack/Discuss

--- a/docs/releases/v5_1_0.md
+++ b/docs/releases/v5_1_0.md
@@ -982,7 +982,7 @@ One of the primary motivations for rewriting TechStacks was to create useful res
  - [Questions/Issues/Discussion/Announcements on Discourse Forums](https://forums.servicestack.net)
  - [Questions/Issues on StackOverflow](https://stackoverflow.com/search?q=servicestack)
  - [Issues on GitHub](https://github.com/ServiceStack/Issues)
- - [Feature Requests on UserVoice](https://servicestack.uservoice.com/forums/176786-feature-requests)
+ - [Feature Requests on ServiceStack/Discuss](https://github.com/ServiceStack/Discuss/discussions/categories/ideas)
  - [Announcements on Twitter](https://twitter.com/ServiceStack)
  - [Discussion/Announcements on Google+](https://plus.google.com/u/0/communities/112445368900682590445)
 
