--- a/docs/releases/v5_9.md
+++ b/docs/releases/v5_9.md
@@ -3490,7 +3490,7 @@ The new implicit AutoQuery conventions below can be used in all AutoQuery Servic
 [CSV Format](/csv-format) responses can use the same [scoped custom responses as JSON](/customize-json-responses) to allow
 Typed Results to exclude default values columns when returning limited [custom fields with `?fields`](/autoquery-rdbms#custom-fields):
 
- - Camel Humps Notation: `?jsconfig=edf`
+ - Camel Humps Notation: `?jsconfig=edv`
  - Full configuration: `?jsconfig=ExcludeDefaultValues`
 
 ## gRPC code-first Development
