--- a/docs/releases/v6.md
+++ b/docs/releases/v6.md
@@ -1814,15 +1814,15 @@ Brotli is currently not returned for Firefox browsers (by **UserAgent** detectio
 
 ## JWT Changes
 
-From this major release, we're changing the default configuration of the [JWT Auth Provider](/jwt-authprovider) to use **HTTP Token Cookies by default** which not only is recommended [for Web Apps](https://stormpath.com/blog/where-to-store-your-jwts-cookies-vs-html5-web-storage#where-to-store-your-jwts), but is also better able to support effortless JWT Token management features.
+From this major release, we're changing the default configuration of the [JWT Auth Provider](/jwt-authprovider) to use **HTTP Token Cookies by default** which is both recommended [for Web Apps](https://stormpath.com/blog/where-to-store-your-jwts-cookies-vs-html5-web-storage#where-to-store-your-jwts), but is also better able to support effortless JWT Token management features.
 
-Although this is technically a **breaking change** in clients that were manually handling BearerTokens returned in `AuthenticateResponse`, it's the more interoperable option as the normal client logic for authenticating using normal [Server Session Cookies](/sessions), e.g:
+Although this is technically a **breaking change** in clients that were manually handling BearerTokens returned in `AuthenticateResponse`, it's the more interoperable solution as the normal client logic for authenticating using normal [Server Session Cookies](/sessions), e.g:
 
 ```csharp
 let api = client.api(new Authenticate({ provider:'credentials', userName, password, rememberMe }))
 ```
 
-This Also works transparently after a server configuration update to switch to using stateless JWT Tokens, with both utilizing Cookies.
+Also works transparently after a configuring to use JWT on the server to switch to using stateless JWT Tokens, as in both cases the HTTP Clients utilize Cookies to enable authenticated requests.
 
 ### Transparent Server Auto Refresh of JWT Tokens
 
