--- a/docs/releases/v4_0_31.md
+++ b/docs/releases/v4_0_31.md
@@ -732,7 +732,7 @@ public class LogAuthEvents : AuthEvents
 
 ## [ServiceStack MiniProfiler Toolkit](https://bitbucket.org/migajek/miniprofilingtoolkit)
 
-From the wider ServiceStack Community, [Michał Gajek](https://plus.google.com/u/0/+Micha%C5%82Gajek/auto) has developed an alternative analyzer of ServiceStack's MiniProfiler results in a comprehensive UI that allows deep introspection of your running Services. From the Project's description:
+From the wider ServiceStack Community, Michał Gajek has developed an alternative analyzer of ServiceStack's MiniProfiler results in a comprehensive UI that allows deep introspection of your running Services. From the Project's description:
 
 ### Description
 
