--- a/docs/releases/v5_1_0.md
+++ b/docs/releases/v5_1_0.md
@@ -984,7 +984,7 @@ One of the primary motivations for rewriting TechStacks was to create useful res
  - [Issues on GitHub](https://github.com/ServiceStack/Issues)
  - [Feature Requests on ServiceStack/Discuss](https://github.com/ServiceStack/Discuss/discussions/categories/ideas)
  - [Announcements on Twitter](https://twitter.com/ServiceStack)
- - [Discussion/Announcements on Google+](https://plus.google.com/u/0/communities/112445368900682590445)
+ - [Discussion/Announcements on Google+](https://servicestack.net/discuss)
 
 This situation is less than ideal as developers don't have a single resource they can frequent to find existing content and get in touch with the rest of the Community. There's also several things we dislike about all sites. Despite Discourse being one of the best forum software available we see a few issues with it like its search and discovery features aren't great, doesn't display threaded conversations well, not optimal for contributing developer content. StackOverflow is very strict about what content it will accept, lacks a welcoming community atmosphere and its markdown support isn't as good as GitHub Flavored Markdown. UserVoice is poor at moderation, editing and discussion, Twitter's only ideal for notifications and Google+ is poor at nearly all forms of rich content, discovery, threaded comments, etc.
 
